--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                             improve functionality. I also collaborated with various team members as part of research and development work to
                             gain a better understanding of the product and features being developed.
                             <br /><br />Languages: Java, Python, SQL
-                            <br />Frameworks and other resources: JUnit, Eclipse, MySQL Workbench, AWS
+                            <br />Frameworks and other resources: JUnit, Eclipse, Postman, MySQL Workbench, AWS
                         </p>
                     </li>
                     <li>
@@ -440,7 +440,7 @@
                                     <!-- Portfolio Modal - Image-->
 									<!-- <img class="img-fluid rounded mb-5" src="assets/img/portfolio/game.png" alt="" /> -->
 									<!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">For an object oriented class I implemented my own version of a card game in Java following various design principles and other object oriented practices. What makes my version unique is that I modified the rules so that, in my own opinion, the game is easier to understand. I have since continued to work on my implementation and made available this version which features many improvements and other significant changes.</p>
+                                    <p class="mb-5">For an object oriented class I implemented my own version of a card game in Java following various design principles and other object oriented practices. What makes my version unique is that I modified the rules so that, in my own opinion, the game is easier to understand. I continued to work on my implementation and have since published this updated version, which features many improvements and other significant changes. Such as switching the graphics library from Java Swing to JavaFX. </p>
                                     <a target="_blank" class="btn btn-primary portfolio-modal" href="https://nonamethe2.itch.io/cavalcade"><i class="fas fa-gamepad fa-fw"></i>&nbsp;Play</a>
 									<button class="btn btn-primary" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close Window</button>
                                 </div>
@@ -472,7 +472,7 @@
                                     <!-- Portfolio Modal - Image-->
 									<!-- <img class="img-fluid rounded mb-5" src="assets/img/portfolio/safe.png" alt="" /> -->
 									<!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">A complex card game intended to teach basic cooking by helping players understand the relations between the various ingredients. The game itself isn't complete and most likely never will be completed. <br /><br />Artwork by Joe.</p>
+                                    <p class="mb-5">A complex card game intended to teach basic cooking by helping players understand the relations between the various ingredients. To find out more and download a beta version of the game, see the link below. <br /><br />Artwork by Joe.</p>
                                     <a target="_blank" class="btn btn-primary portfolio-modal" href="https://nonamethe2.github.io/GAM224SandwichBuilder/"><i class="fas fa-info-circle fa-fw"></i>&nbsp;Info</a>
 									<button class="btn btn-primary" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close Window</button>
                                 </div>
@@ -504,7 +504,7 @@
                                     <!-- Portfolio Modal - Image-->
 									<!-- <img class="img-fluid rounded mb-5" src="assets/img/portfolio/submarine.png" alt="" /> -->
 									<!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">For my capstone project I worked as a group with several other students to design and build a searchable job application aggregator. With advanced features such as interactable graphs, SQL connections, and user profile management.</p>
+                                    <p class="mb-5">For my capstone project I worked as a team with several other students to design and build a searchable job application aggregator. With advanced features such as interactable graphs, SQL connections, and user profile management.</p>
                                     <a target="_blank" class="btn btn-primary portfolio-modal" href="https://github.com/enrique343/Capstone_project"><i class="fas fa-info-circle fa-fw"></i>&nbsp;Info</a>
 									<button class="btn btn-primary" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close Window</button>
                                 </div>
@@ -598,9 +598,9 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
 									<!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">Step right up and test your luck, and maybe even your skill, at navigating the new and improved Wild Dungeons. Now featuring unique characters and one enemy. Explore and fight your way through a procedurally generated dungeon like no other (not a guarentee). </p>
+                                    <p class="mb-5">Step right up and test your luck, and maybe even your skill, at navigating the new and improved Wild Dungeons. Now featuring unique characters and two enemies. This roguelike dungeon crawler features grid-based movement and turn-based gameplay. Explore and fight your way through a procedurally generated dungeon like no other (not a guarentee). </p>
                                     <br />
-                                    <p>Completely reworked from the ground up with updated graphics, a newer version will be available for purchase. There is currently no timeline on when this version will be available. </p>
+                                    <p>Completely reworked from the ground up with updated graphics and many new features, a newer version is available for purchase. The original jam version is still playable in the browser at the link below. </p>
                                     <a target="_blank" class="btn btn-primary portfolio-modal" href="https://nonamethe2.itch.io/wild-dungeons"><i class="fas fa-store fa-fw"></i>&nbsp;Store</a>
                                     <button class="btn btn-primary" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close Window</button>
                                 </div>
