--- a/index.html
+++ b/index.html
@@ -104,6 +104,14 @@
                             <img class="img-fluid" src="assets/img/portfolio/Wild Dungeons.png" alt="" />
                         </div>
                     </div>
+                    <div class="col-md-6 col-lg-4 mb-5">
+                        <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal10">
+                            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                                <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-search-plus fa-3x"></i></div>
+                            </div>
+                            <img class="img-fluid" src="assets/img/portfolio/Solitarot.png" alt="" />
+                        </div>
+                    </div>
                 </div>
             </div>
 			
@@ -602,6 +610,38 @@
                                     <br />
                                     <p>Completely reworked from the ground up with updated graphics and many new features, a newer version is available for purchase. The original jam version is still playable in the browser at the link below. </p>
                                     <a target="_blank" class="btn btn-primary portfolio-modal" href="https://nonamethe2.itch.io/wild-dungeons"><i class="fas fa-store fa-fw"></i>&nbsp;Store</a>
+                                    <button class="btn btn-primary" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close Window</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Portfolio Modal 10-->
+        <div class="portfolio-modal modal fade" id="portfolioModal10" tabindex="-1" role="dialog" aria-labelledby="portfolioModal10Label" aria-hidden="true">
+            <div class="modal-dialog modal-xl" role="document">
+                <div class="modal-content">
+                    <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true"><i class="fas fa-times"></i></span>
+                    </button>
+                    <div class="modal-body text-center">
+                        <div class="container">
+                            <div class="row justify-content-center">
+                                <div class="col-lg-8">
+                                    <!-- Portfolio Modal - Title-->
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal10Label">Soli-Tarot</h2>
+                                    <!-- Icon Divider-->
+                                    <div class="divider-custom">
+                                        <div class="divider-custom-line"></div>
+                                        <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                                        <div class="divider-custom-line"></div>
+                                    </div>
+									<!-- Portfolio Modal - Text-->
+                                    <p class="mb-5">No crystal balls or ouija boards here, only fools. This variation of Klondike Solitaire uses a full 78 card Tarot deck instead of the more commonly used 52 card deck. </p>
+                                    <br />
+                                    <p>Currently you can play a demo version while I continue working towards the final product. Among other changes I intend to overhaul the interface, add more audio and visual cues, and design a rule book. </p>
+                                    <a target="_blank" class="btn btn-primary portfolio-modal" href="https://nonamethe2.itch.io/solitarot"><i class="fas fa-gamepad fa-fw"></i>&nbsp;Play</a>
                                     <button class="btn btn-primary" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close Window</button>
                                 </div>
                             </div>
