Updating solitarot description

--- a/index.html
+++ b/index.html
@@ -640,7 +640,7 @@
 									<!-- Portfolio Modal - Text-->
                                     <p class="mb-5">No crystal balls or ouija boards here, only fools. This variation of Klondike Solitaire uses a full 78 card Tarot deck instead of the more commonly used 52 card deck. </p>
                                     <br />
-                                    <p>Currently you can play a demo version while I continue working towards the final product. Among other changes I intend to overhaul the interface, add more audio and visual cues, and design a rule book. </p>
+									<p>A fresh twist on a classic game. While retaining many elements of Klondike Solitaire, it makes use of the Tarot's fifth suit to add an extra challenge. The game is fully playable but I intend to make various quality of life improvements to enhance the user experience. </p>
                                     <a target="_blank" class="btn btn-primary portfolio-modal" href="https://nonamethe2.itch.io/solitarot"><i class="fas fa-gamepad fa-fw"></i>&nbsp;Play</a>
                                     <button class="btn btn-primary" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close Window</button>
                                 </div>
